# agentic-workflow-workshop

./: openRouter.js
1_deep_research/: lab1_free.ipynb  lab2_free.ipynb
2_engineering_team/engineering_yaml_team/: README.md  pyproject.toml
2_engineering_team/engineering_yaml_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
2_engineering_team/engineering_yaml_team/src/engineering_yaml_team/: crew.py  main.py
2_engineering_team/engineering_yaml_team/src/engineering_yaml_team/config/: agents.yaml  tasks.yaml
2_engineering_team/team/: README.md  crew.jsonc  pyproject.toml
2_engineering_team/team/agents/: backend_engineer.jsonc  engineering_lead.jsonc  frontend_engineer.jsonc  placeholder.jsonc  test_engineer.jsonc
