[project]
name = "engineering_yaml_team"
version = "0.1.0"
description = "engineering_yaml_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]>=1.15.2,<2.0.0",
]

[project.scripts]
engineering_yaml_team = "engineering_yaml_team.main:run"
run_crew = "engineering_yaml_team.main:run"
train = "engineering_yaml_team.main:train"
replay = "engineering_yaml_team.main:replay"
test = "engineering_yaml_team.main:test"
run_with_trigger = "engineering_yaml_team.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
