[project]
name = "team"
version = "0.1.0"
description = "team using crewAI"
authors = [{ name = "Reem W. Basho", email = "bashorw@students.rhu.edu.lb" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=1.15.2,<2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agents", "crew.jsonc", "tools", "knowledge", "skills"]

[tool.crewai]
type = "crew"
definition = "crew.jsonc"
